@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.1.58:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.1.59:
 
 Epson EC 4020 Series
 Epson EC 4030 Series
@@ -82,6 +82,7 @@ Epson L14150 Series
 Epson L15150 Series
 Epson L15160 Series
 Epson L15180 Series
+Epson L18050 Series
 Epson M1140 Series
 Epson M1170 Series
 Epson M1180 Series
