@@ -1,6 +1,6 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.57.tar.gz 4996535 BLAKE2B 9ca725e5e5d15511cd018ff52fa1a50922bf0e8412e527e1f1288d861c509797e4a74ee1386853a702eeaaee1bca8666af356860eb9688c097298f27f7ba8d46 SHA512 827fafdf53e2ed1e0f9cdf585a67e0d9152d638055a9b2738ee73654f68bf0af617e3471534dec5f2e462fddb7ef0b20e30c8a679a9de031b379e05bfac06fbc
 DIST epson-inkjet-printer-escpr2-1.1.58.tar.gz 5013891 BLAKE2B cf0ad8bf8f428241544f1a6405091cf6076e1f37ec572c96b64f3139c14f2abb61c7c26b39a3f3a336b737a3ebf1057439690f14e0021b231fe1baa5944f2446 SHA512 5a266c68a5564e0fcf0d387f5e24e2f91faa51981fb911b63c18fc363599855e7edcfa38b5851423bda2f554990048633bee053df238035e6b56883ffa691507
-EBUILD epson-inkjet-printer-escpr2-1.1.57-r1.ebuild 1319 BLAKE2B bea557a461416ecab1c1cda71628fdb8666182e5b4a47430a2266271ac7853a83c7044b604450b147a01c601d8cd9b7a953337d0fabe0eff55c8e3d7059b092e SHA512 8e3b913855fe22c7f8b9b72cce1673481d3cbbe49f101cca2bddd457e9f4cf7cbbac2b49408d12a3af10b8f89980a312a975f55251fd9c4737d16887cda75e2a
+DIST epson-inkjet-printer-escpr2-1.1.59.tar.gz 5033782 BLAKE2B bed27940ed23c223b8634a6e93a728213a8dd8310fb0a84d9704ee087354de35820ffea40cf95103fed07a5c8cf90a68355afd723aa04fe845fab1a9a06f5074 SHA512 97b7ce729d0ce83fcd1854f148d5ada64555b5a0305e270dafa81e70b7046daf5a674070e7d2656ecead3b3856576a6ce339d9c0aa8b1dc3936eb2abb9c17fc9
 EBUILD epson-inkjet-printer-escpr2-1.1.58.ebuild 1319 BLAKE2B d52cf6adc74c3fc421bb2e1c5abb30461c2094e60fa95032b019766dc2e107f91cbafecdd67f65e3ab44c38e19067a7a753b12a0e2bdc8d8fce09896e921364d SHA512 6845a18a20a61883fbfcf9e3f0bc9ccf81b229c503f8404a573ed4669774d8c5ecc36b93cf9f4b3ae61342c0644c246da1d08f0481e828d77ba8a4312f350f28
+EBUILD epson-inkjet-printer-escpr2-1.1.59.ebuild 1319 BLAKE2B 18dc8f8dbc56ecf10ddc9bd7e330fb6817cc113373348a85baef303b40ab49c85e0ab37de4e18a56e85cdbd6dc5c613facd70de9b78e4a1658b4a784c50b17ca SHA512 ff514a3e72f85475b7dde95bc8ceb75e6d7cd4e5358daea4c1e49c2204960e9937d249db083f7dce90fd654843b270afa8368721dfbb54d64544a6570aa6e5ea
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
