@@ -1,6 +1,11 @@
 NEWS -- an overview of user-visible changes with each release
 
 ----------------------------------------------------------------------
+epson-inkjet-printer-escpr2-1.1.59                        (2022-12-22)
+----------------------------------------------------------------------
+ * Supported new models
+
+----------------------------------------------------------------------
 epson-inkjet-printer-escpr2-1.1.58                        (2022-12-21)
 ----------------------------------------------------------------------
  * Supported new models
